--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,32 @@
+/* Globales */
+
 :root {
      --blanco: rgb(240, 240, 240);
+     --gris: rgb(160, 160, 160);
      --negro: rgb(20, 20, 20);
 }
 
 * {
      color: var(--negro);
+     font-family: 'Source Sans Pro', sans-serif;
 }
 
 body {
      background-color: rgb(240, 240, 240);
+     margin: 0;
 }
+
+/* Cabecera */
 
 header {
      display: flex;
      flex-direction: row;
      justify-content: space-around;
+     box-shadow: 0px 5px 4px var(--gris);
+}
+
+.titulo-principal {
+     font-size: 32px;
+     font-weight: 600;
+     text-shadow: 1px 0 1px rgba(240, 50, 70, 0.4);
 }
